@@ -1,5 +1,6 @@
 content   gamefox content/
 skin      gamefox classic/1.0 skin/classic/
+style     chrome://global/content/customizeToolbar.xul chrome://gamefox/skin/toolbar-button.css
 overlay   chrome://browser/content/browser.xul chrome://gamefox/content/overlay.xul
 overlay   chrome://navigator/content/navigator.xul chrome://gamefox/content/overlay.xul
 
