@@ -93,4 +93,3 @@ treechildren::-moz-tree-checkbox(checked)
 {
     list-style-image: url("chrome://gamefox/skin/cbox-full.png");
 }
-
