@@ -1,0 +1,9 @@
+#gamefox-button
+{
+  list-style-image: url("chrome://gamefox/skin/btn-large.png");
+}
+
+toolbar[iconsize="small"] #gamefox-button
+{
+  list-style-image: url("chrome://gamefox/skin/btn-small.png");
+}
