@@ -4,6 +4,7 @@
     * Fix "new row" pagination
     * Alternate colors when removing topics/messages
     * Improve speed of character counters
+    * Toolbar button
 
 2008-08-23:
     * version 0.6.5
